# parallel

./: ChangeLog  Makefile.am  NEWS  README  cf.c  configure.ac  error.c  log.c  main.c  options.c  parallel.1  parallel.h  xmalloc.c
