dnl Process this file with autoconf to produce a configure script.
AC_INIT(parallel, 0.9, voss@seehuhn.de)
AC_CONFIG_SRCDIR([parallel.h])
AM_INIT_AUTOMAKE
AC_CONFIG_HEADERS(config.h)

AC_DEFINE(_GNU_SOURCE,1,[Define this if your system supports it.])

dnl Check for programs
AC_PROG_CC

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
